Corrected alignment on edit review

--- a/public/style.css
+++ b/public/style.css
@@ -88,8 +88,6 @@ label {
 	color: #30343F;
 	height:40px;
 	width:100%;
-
-
 }
 
 input {
@@ -156,7 +154,6 @@ input + input {
 
 .edit {
 	position: relative;
-	margin-right: 355px;
 	color: white;
 	
 }
@@ -188,5 +185,9 @@ input + input {
 a {
   color: #273469;
   text-decoration: none; 
+}
+
+.review_edit {
+	position: relative;
 }
 ​
